--- a/frontend/src/app/components/container/all-sections/all-sections.component.scss
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.scss
@@ -1,4 +1,4 @@
-@import "../../../styles.scss";
+@import "../../../../styles.scss";
 :host ::ng-deep .mat-horizontal-stepper-header-container {
   display: none;
 }
@@ -7,42 +7,6 @@
 }
 .text {
   font-family: "Montserrat-Regular";
-}
-.skipButton {
-  min-height: 64px;
-  min-width: 160px;
-  font-family: "Montserrat-Light";
-  white-space: pre-wrap !important;
-  font-family: "Montserrat-Regular";
-}
-.previousButton {
-  min-height: 64px;
-  min-width: 160px;
-  background-color: $secondary-light;
-  color: $secondary;
-  font-family: "Montserrat-Light";
-  font-weight: 600;
-}
-.previousButton:hover {
-  border-width: 1.5px;
-  background-color: $pure-white;
-  border-color: $secondary;
-  color: $secondary;
-}
-.nextButton:hover {
-  border-width: 1.5px;
-  background-color: $pure-white;
-  border-color: $primary;
-  color: $primary;
-}
-.nextButton {
-  min-height: 64px;
-  min-width: 160px;
-  background-color: $primary;
-  color: $secondary-light;
-  font-family: "Montserrat-Light";
-  white-space: pre-wrap !important;
-  font-weight: 600;
 }
 .addFont {
   font-family: "Montserrat-Light";
@@ -80,7 +44,7 @@
       display: none;
     }
     .widthChange{
-      width: 15%;
+      width: 16%;
     }
 }
  
@@ -91,7 +55,7 @@
       display: none;
     }
     .widthChange{
-      width: 15%;
+      width: 20%;
     }
 }
 @media screen
