--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -33,3 +33,39 @@ body {
   font-family: "Montserrat-Regular";
   font-weight: 600;
 }
+.skipButton {
+  min-height: 64px;
+  min-width: 160px;
+  font-family: "Montserrat-Light";
+  white-space: pre-wrap !important;
+  font-family: "Montserrat-Regular";
+}
+.previousButton {
+  min-height: 64px;
+  min-width: 160px;
+  background-color: $secondary-light;
+  color: $secondary;
+  font-family: "Montserrat-Light";
+  font-weight: 600;
+}
+.previousButton:hover {
+  border-width: 1.5px;
+  background-color: $pure-white;
+  border-color: $secondary;
+  color: $secondary;
+}
+.nextButton:hover {
+  border-width: 1.5px;
+  background-color: $pure-white;
+  border-color: $primary;
+  color: $primary;
+}
+.nextButton {
+  min-height: 64px;
+  min-width: 160px;
+  background-color: $primary;
+  color: $secondary-light;
+  font-family: "Montserrat-Light";
+  white-space: pre-wrap !important;
+  font-weight: 600;
+}
