--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -1,7 +1,7 @@
 <div class="addFont">
   <div *ngIf="final">
     <div class="w-full h-full flex flex-col py-10">
-      <div class="flex flex-row justify-center gap-2">
+      <div class="flex flex-row justify-center gap-3">
         <div
           *ngFor="let section of sections; let i = index"
           [ngClass]="{
@@ -19,16 +19,16 @@
                   items-center
                   align-middle
                   content-center
-                  pr-2
+                  pr-3
                 "
                 [ngClass]="{
                   classChange: selectedIndex === i,
                   progressBarDisable: selectedIndex !== i - 1
                 }"
                 style="
-                  width: calc(100% - 2.5rem - 1rem);
+                  width: calc(100% - 2rem - 1rem);
                   top: 50%;
-                  transform: translate(-50%, -50%);
+                  transform: translate(-50%,-50%);
                 "
               >
                 <div
@@ -58,6 +58,7 @@
                 text-lg text-white
                 flex
                 items-center
+                gap-2
               "
               [ngClass]="
                 widthsArray[i] > 99 && sectionColoring[i] == true
@@ -97,12 +98,13 @@
                 items-center
                 align-middle
                 content-center
+                pr-3
               "
               [ngClass]="{
                 progressBarDisable: selectedIndex !== length - 2
               }"
               style="
-                width: calc(100% - 2.5rem - 1rem);
+                width: calc(100% - 2rem - 1rem);
                 top: 50%;
                 transform: translate(-50%, -50%);
               "
