--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -1,7 +1,7 @@
 <div class="addFont">
   <div *ngIf="final">
     <div class="w-full h-full flex flex-col py-10">
-      <div class="flex flex-row justify-center gap-3">
+      <div class="flex flex-row justify-center">
         <div
           *ngFor="let section of sections; let i = index"
           [ngClass]="{
@@ -19,7 +19,6 @@
                   items-center
                   align-middle
                   content-center
-                  pr-3
                 "
                 [ngClass]="{
                   classChange: selectedIndex === i,
@@ -58,7 +57,6 @@
                 text-lg text-white
                 flex
                 items-center
-                gap-2
               "
               [ngClass]="
                 widthsArray[i] > 99 && sectionColoring[i] == true
@@ -98,7 +96,6 @@
                 items-center
                 align-middle
                 content-center
-                pr-3
               "
               [ngClass]="{
                 progressBarDisable: selectedIndex !== length - 2
