Final Commit With Changes

--- a/frontend/src/app/components/container/home/home.component.html
+++ b/frontend/src/app/components/container/home/home.component.html
@@ -27,8 +27,7 @@
     <div class="flex flex-row justify-center m-5">
       <div>
         <i
-          class="material-icons h-auto w-auto px-10 py-5 rounded-lg"
-          id="btnHome"
+          class="material-icons h-auto w-auto px-10 py-5 rounded-lg btnHome"
           >{{ section.icon }}</i
         >
       </div>
