--- a/frontend/src/app/components/container/home/home.component.scss
+++ b/frontend/src/app/components/container/home/home.component.scss
@@ -21,7 +21,7 @@
   border: 1.5px solid $primary;
   color: $primary;
 }
-#btnHome {
+.btnHome {
   font-size: 30px;
   background-color: $primary;
   color: $secondary-light;
