Bug fixes and DB connection changes

--- a/frontend/src/app/components/impl/final-overview/final-overview.component.scss
+++ b/frontend/src/app/components/impl/final-overview/final-overview.component.scss
@@ -27,7 +27,7 @@
     font-family: "Montserrat-Regular";
   }
   .spinner{
-    position: absolute;
+    position: fixed;
     background:white;
     opacity: 0.8;
     z-index: 99;
