--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -155,7 +155,7 @@
                     (click)="switchIt(stepper, true)"
                     class="text-lg py-2 px-4 rounded-lg SkipButton"
                   >
-                    Skip {{ section.stepLabel }}
+                    {{ skipStringControl }} {{ section.stepLabel }}
                   </button>
                 </div>
               </mat-card-actions>
