--- a/frontend/src/app/components/impl/final-overview/final-overview.component.html
+++ b/frontend/src/app/components/impl/final-overview/final-overview.component.html
@@ -74,7 +74,7 @@
       </mat-expansion-panel-header>
       <app-summary [indexOfSection]="indices[i]"></app-summary>
       <mat-action-row>
-        <div class="flex flex-row flex-wrap gap-2 justify-end mr-5">
+        <div class="flex flex-row flex-wrap gap-2 justify-end mr-5" *ngIf="filledSectionsArray.length !== 1">
           <button
             (click)="prevStep()"
             class="text-lg py-2 px-4 rounded-lg previousButton"
