--- a/frontend/src/app/components/shared/alert-box/alert-box.component.scss
+++ b/frontend/src/app/components/shared/alert-box/alert-box.component.scss
@@ -1,4 +1,7 @@
 @import "../../../../styles.scss";
+.fontDisplay{
+  font-family: "Montserrat-Regular";
+}
 .cancel{
     min-height: 64px;
     min-width: 160px;
