--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -1,7 +1,7 @@
 <div class="addFont">
   <div
     *ngIf="final"
-    class="w-full h-full flex flex-col justify-center items-center py-10"
+    class="w-full h-full flex flex-col justify-center py-10"
   >
     <div class="flex flex-row justify-center my-4 pb-4">
       <div
@@ -171,12 +171,8 @@
           <div
             class="
               flex flex-row flex-wrap
-              justify-end
-              w-11/12
-              mt-5
-              sm:mr-5
-              md:mr-5
-              lg:mr-10
+              justify-center
+              mt-5            
             "
           >
             <button
