--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -27,6 +27,7 @@ body {
 }
 .toolTipStyle{
   background-color: $primary !important;
+  font-size:10px;
 }
 .customSnackBar {
   background-color: $secondary-light;
