--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -36,7 +36,7 @@
             </span>
           </div>
           <div
-            class="flex-1 py-2"
+            class="flex-1 py-2 text-center"
             [ngClass]="{
               progressBarDisable: selectedIndex !== i && selectedIndex + 1 !== i
             }"
@@ -78,6 +78,8 @@
                   text-center text-gray-200
                   w-0
                   rounded
+                  ease-in
+                  duration-500
                   addColor
                 "
                 [style.width.%]="widthsArray[i]"
