Few more Phase-1 Changes

--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -1,7 +1,8 @@
-@import '../styles.scss'; 
-::ng-deep .mat-progress-spinner circle, .mat-spinner circle {
-    stroke: $primary;
-  }
-.iconSize{
+@import "../styles/general-styles.scss";
+::ng-deep .mat-progress-spinner circle,
+.mat-spinner circle {
+  stroke: $primary;
+}
+.iconSize {
   transform: scale(4);
 }
