--- a/frontend/src/app/components/container/all-sections/all-sections.component.scss
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles.scss";
+@import "../../../../styles/general-styles.scss";
 :host ::ng-deep .mat-horizontal-stepper-header-container {
   display: none;
 }
