--- a/frontend/src/app/components/container/home/home.component.scss
+++ b/frontend/src/app/components/container/home/home.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles.scss";
+@import "../../../../styles/general-styles.scss";
 .fullPage {
   background-color: $pure-white;
   min-height: 100vh;
