--- a/frontend/src/app/components/shared/alert-box/alert-box.component.scss
+++ b/frontend/src/app/components/shared/alert-box/alert-box.component.scss
@@ -1,33 +1,33 @@
-@import "../../../../styles.scss";
-.fontDisplay{
+@import "../../../../styles/general-styles.scss";
+.fontDisplay {
   font-family: "Montserrat-Regular";
 }
-.cancel{
-    min-height: 64px;
-    min-width: 160px;
-    background-color: $secondary-light;
-    color: $secondary;
-    font-family: "Montserrat-Light";
-    font-weight: 600;
-  }
-  .cancel:hover {
-    border-width: 1.5px;
-    background-color: $pure-white;
-    border-color: $secondary;
-    color: $secondary;
-  }
-  .ok:hover {
-    border-width: 1.5px;
-    background-color: $pure-white;
-    border-color: $primary;
-    color: $primary;
-  }
-  .ok {
-    min-height: 64px;
-    min-width: 160px;
-    background-color: $primary;
-    color: $secondary-light;
-    font-family: "Montserrat-Light";
-    white-space: pre-wrap !important;
-    font-weight: 600;
-  }
+.cancel {
+  min-height: 64px;
+  min-width: 160px;
+  background-color: $secondary-light;
+  color: $secondary;
+  font-family: "Montserrat-Light";
+  font-weight: 600;
+}
+.cancel:hover {
+  border-width: 1.5px;
+  background-color: $pure-white;
+  border-color: $secondary;
+  color: $secondary;
+}
+.ok:hover {
+  border-width: 1.5px;
+  background-color: $pure-white;
+  border-color: $primary;
+  color: $primary;
+}
+.ok {
+  min-height: 64px;
+  min-width: 160px;
+  background-color: $primary;
+  color: $secondary-light;
+  font-family: "Montserrat-Light";
+  white-space: pre-wrap !important;
+  font-weight: 600;
+}
