--- a/frontend/src/app/components/shared/question/question.component.scss
+++ b/frontend/src/app/components/shared/question/question.component.scss
@@ -1,4 +1,4 @@
-@import "../../../../styles.scss";
+@import "../../../../styles/general-styles.scss";
 .buttonInQuestion {
   min-height: 64px;
   min-width: 160px;
@@ -8,19 +8,19 @@
   color: $secondary;
   font-family: "Montserrat-Regular";
 }
-.chips{
+.chips {
   color: $secondary;
 }
 .textFont {
   font-family: "Montserrat-Light";
 }
-.ifTrue{
+.ifTrue {
   background-color: $primary-light;
   color: $secondary-light;
   font-weight: 600;
   height: fit-content;
 }
-.ifFalse{
+.ifFalse {
   background-color: $secondary-light;
   color: $secondary;
   font-weight: 200;
