--- a/frontend/src/styles/font-styles.scss
+++ b/frontend/src/styles/font-styles.scss
@@ -6,3 +6,4 @@
   font-family: "Montserrat-Regular";
   src: url("/assets/fonts/Montserrat-Regular.ttf") format("truetype");
 }
+$defaultFont:sans-serif;
