--- a/frontend/src/styles/general-styles.scss
+++ b/frontend/src/styles/general-styles.scss
@@ -10,7 +10,7 @@
 body {
   padding: 0;
   margin: 0;
-  font-family: "Montserrat-Light", sans-serif;
+  font-family: "Montserrat-Light", $defaultFont;
 }
 .toolTipStyle {
   background-color: $primary !important;
@@ -20,22 +20,21 @@ body {
   color: red;
   border-left: 5px solid red;
   border-radius: 2px;
-  font-family: "Montserrat-Regular";
+  font-family: "Montserrat-Regular", $defaultFont;
   font-weight: 600;
 }
 .skipButton {
   min-height: 64px;
   min-width: 160px;
-  font-family: "Montserrat-Light";
   white-space: pre-wrap !important;
-  font-family: "Montserrat-Regular";
+  font-family: "Montserrat-Regular", $defaultFont;
 }
 .previousButton {
   min-height: 64px;
   min-width: 160px;
   background-color: $secondary-light;
   color: $secondary;
-  font-family: "Montserrat-Light";
+  font-family: "Montserrat-Light", $defaultFont;
   font-weight: 600;
 }
 .previousButton:hover {
@@ -53,7 +52,7 @@ body {
   min-width: 160px;
   background-color: $primary;
   color: $secondary-light;
-  font-family: "Montserrat-Light";
+  font-family: "Montserrat-Light", $defaultFont;
   white-space: pre-wrap !important;
   font-weight: 600;
 }
