--- a/frontend/src/app/components/container/all-sections/all-sections.component.html
+++ b/frontend/src/app/components/container/all-sections/all-sections.component.html
@@ -29,47 +29,11 @@
           </div>
         </div>
         <div class="flex flex-col">
-          <div
-            class="
-              w-36
-              align-center
-              items-center
-              align-middle
-              content-center
-              flex
-              pt-4
-            "
-            [ngClass]="{
-              classChange: selectedIndex === i - 1,
-              progressBarDisable: selectedIndex !== i
-            }"
-          >
-            <div
-              class="
-                w-full
-                bg-gray-200
-                rounded
-                items-center
-                align-middle align-center
-                flex-1
-              "
-            >
-              <div
-                class="
-                  text-xs
-                  leading-none
-                  py-1
-                  text-center text-gray-200
-                  w-0
-                  rounded
-                  ease-in
-                  duration-500
-                  addColor
-                "
-                [style.width.%]="widthsArray[i]"
-              ></div>
-            </div>
-          </div>
+            <app-progress-bar 
+              [i]="i"
+              [selectedIndex]="selectedIndex"
+              [percentage]="widthsArray[i]"  
+            ></app-progress-bar>
         </div>
       </div>
       <div
@@ -79,16 +43,6 @@
           widthChange: selectedIndex === length - 2
         }"
       >
-        <!-- <div
-          class="w-10 h-10 rounded-full text-lg text-white flex items-center"
-          [ngClass]="
-            widthsArray[length - 2] > 99 ? 'contentTrue' : 'contentFalse'
-          "
-        >
-          <span class="text-center w-full"
-            ><mat-icon class="py-2">check_circle_outline</mat-icon></span
-          >
-        </div> -->
         <app-icon
           [i]="-5"
           [selectedIndex]="-1"
